--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Install UV & rust
+      run: |
+        curl -LsSf https://astral.sh/uv/install.sh | sh
+        curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh
     - uses: actions/checkout@v4
     - name: Build
       run: |
