--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ authors = [
     { name = "Deependu Jha", email = "deependujha21@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "maturin>=1.8.2",
+]
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python"
