--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -22,8 +22,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: |
-        uv sync
-        uv build --all-groups
+        uv sync --all-groups
+        uv build
         pip install -e .
     - name: Run tests
       run: pytest
