--- a/.github/workflows/ci_test.yml
+++ b/.github/workflows/ci_test.yml
@@ -22,7 +22,7 @@ jobs:
     - uses: actions/checkout@v4
     - name: Build
       run: |
-        uv sync --all-groups
+        uv sync --all-extras
         uv build
         pip install -e .
     - name: Run tests
